--- a/similar-movies-recommender/pyproject.toml
+++ b/similar-movies-recommender/pyproject.toml
@@ -9,6 +9,8 @@ name = "similar-movies-recommender"
 [tool.poetry.dependencies]  # https://python-poetry.org/docs/dependency-specification/
 python = "^3.12"
 pydantic = "^2.6.4"
+pydantic-settings = "^2.4.0"
+elasticsearch = "^8.15.0"
 
 [tool.poetry.group.dev.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
 mypy = "^1.11.2"
