--- a/recomendation_api/requirements.txt
+++ b/recomendation_api/requirements.txt
@@ -1,12 +1,16 @@
 alembic==1.13.1
+async-fastapi-jwt-auth==0.6.5
+gunicorn==22.0.0
 pydantic==2.8.2
-fastapi==0.112.0
+fastapi==0.109.0
 pydantic-settings==2.4.0
 sqlalchemy==2.0.32
 asyncpg==0.29.0
 aiohttp==3.10.3
+pandas==2.2.2
 pytest-asyncio==0.23.8
 python-jose==3.3.0
 uvicorn==0.30.6
 orjson==3.10.3
 redis==4.4.2
+Werkzeug==3.0.3
