--- a/similar-movies-recommender/pyproject.toml
+++ b/similar-movies-recommender/pyproject.toml
@@ -14,6 +14,7 @@ elasticsearch = "^8.15.0"
 loguru = "^0.7.2"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
 tenacity = "^9.0.0"
+apscheduler = "^3.10.4"
 
 [tool.poetry.group.dev.dependencies]  # https://python-poetry.org/docs/master/managing-dependencies/
 mypy = "^1.11.2"
