--- a/recommend-engine-collabarative/recommend-engine-collabarative/env.example
+++ b/recommend-engine-collabarative/recommend-engine-collabarative/env.example
@@ -4,22 +4,11 @@ LOG_FORMAT=<level>{level: <8}</level> <green>{time:YYYY-MM-DD HH:mm:ss.SSS}</gre
 LOG_ROTATION=10 days
 LOG_RETENTION=1 months
 
-MONGODB_URI=mongodb://mongos1:27017,mongos2:27017
-MD_DB_NAME=TEST1
-MD_DB_HOST=0.0.0.0
-MD_DB_PORT=27017
-MD_DB_USER=devops
-MD_DB_PASS=qwerty
+MONGODB_URI=mongodb://localhost:27019,localhost:27020
+MD_DB_NAME=movie_ratings
 
-MD_DB_NAME=TEST2
-MD_DB_HOST=0.0.0.0
-MD_DB_PORT=27017
-MD_DB_USER=devops
-MD_DB_PASS=qwerty
-
-JWT_SECRET_KEY=test-secret
-JWT_ALGORITHM=HS256
-
-DEBUG=True
-
-SENTRY_DSN=https://0687df3d7eef5995ed6b59377692711f@o4507584677478400.ingest.de.sentry.io/4507584685342800
+PG_DB_NAME=recommendations
+PG_DB_HOST=localhost
+PG_DB_PORT=5432
+PG_DB_USER=app
+PG_DB_PASS=123qwe
