--- a/recommend-engine-collabarative/docker-compose.yml
+++ b/recommend-engine-collabarative/docker-compose.yml
@@ -1,6 +1,14 @@
 version: "3.9"
 
 services:
+
+  recommend-engine-collabarative:
+    container_name: recommend-engine-collabarative
+    build: .
+    env_file: .env
+    networks:
+      - engine-collabarative-network
+
   mongors1n1:
     container_name: mongors1n1
     image: mongo
@@ -12,6 +20,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/mongo_cluster/data1:/data/db
+    networks:
+      - engine-collabarative-network
 
   mongors1n2:
     container_name: mongors1n2
@@ -24,6 +34,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/mongo_cluster/data2:/data/db
+    networks:
+      - engine-collabarative-network
 
   mongors1n3:
     container_name: mongors1n3
@@ -36,6 +48,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/mongo_cluster/data3:/data/db
+    networks:
+      - engine-collabarative-network
 
   mongors2n1:
     container_name: mongors2n1
@@ -48,6 +62,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/mongo_cluster/data4:/data/db
+    networks:
+      - engine-collabarative-network
 
   mongors2n2:
     container_name: mongors2n2
@@ -60,6 +76,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/mongo_cluster/data5:/data/db
+    networks:
+      - engine-collabarative-network
 
   mongors2n3:
     container_name: mongors2n3
@@ -72,6 +90,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/mongo_cluster/data6:/data/db
+    networks:
+      - engine-collabarative-network
 
   mongocfg1:
     container_name: mongocfg1
@@ -82,6 +102,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/mongo_cluster/config1:/data/db
+    networks:
+      - engine-collabarative-network
 
   mongocfg2:
     container_name: mongocfg2
@@ -92,6 +114,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/mongo_cluster/config2:/data/db
+    networks:
+      - engine-collabarative-network
 
   mongocfg3:
     container_name: mongocfg3
@@ -102,6 +126,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /tmp/mongo_cluster/config3:/data/db
+    networks:
+      - engine-collabarative-network
 
   mongos1:
     container_name: mongos1
@@ -116,6 +142,8 @@ services:
       - "27017"
     volumes:
       - /etc/localtime:/etc/localtime:ro
+    networks:
+      - engine-collabarative-network
 
   mongos2:
     container_name: mongos2
@@ -130,5 +158,9 @@ services:
       - "27017"
     volumes:
       - /etc/localtime:/etc/localtime:ro
+    networks:
+      - engine-collabarative-network
 
-
+networks:
+  engine-collabarative-network:
+    name: engine-collabarative-network
