--- a/recommend-engine-collabarative/Dockerfile
+++ b/recommend-engine-collabarative/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.12-slim
 
 RUN apt-get update && apt-get install -y \
+    gcc \
+    g++ \
+    libpython3-dev \
     && pip install --upgrade pip
 
 WORKDIR /app
@@ -9,6 +12,6 @@ COPY requirements.txt /app/requirements.txt
 
 RUN pip install -r /app/requirements.txt
 
-COPY . /app
+COPY recommend-engine-collabarative /app
 
 CMD ["python", "main.py"]
