--- a/recomendation_api/.env.example
+++ b/recomendation_api/.env.example
@@ -21,7 +21,7 @@ FAST_API_INTERNAL_PORT=8000
 NGINX_INTERNAL_PORT=80
 NGINX_EXTERNAL_PORT=80
 
-PS_USER=postgres
+PS_USER=app
 PS_PASSWORD=123qwe
 PS_HOST=postgres
 PS_PORT=5432
